--- a/Pages/About_Us.html
+++ b/Pages/About_Us.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <link rel="stylesheet" href="bootstrap-5.1.0-dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel=StyleSheet href="styles.css" type="text/css" media=screen>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,11 +13,11 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="About_Us.html">About Us</a></li>
                 <li><a href="Portafolio.html">Portafolio</a></li>
-                <li><a href="#">Contacto</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="Contacto.html">Contacto</a></li>
+                <li><a href="Blog.html">Blog</a></li>
             </ul>
         </nav>
     </header>
@@ -35,7 +35,6 @@
         La creatividad es la base de nuestra confianza y la confianza es el camino para crear comunidad. 
         Amamos lo que hacemos y estamos inspirados los unos por los otros.
     </p>
-    <script src="bootstrap-5.1.0-dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="bootstrap-5.1.0-dist/popper.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>   
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>   
 </body>
 </html>
