--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -1,29 +1,48 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <link rel=StyleSheet href="../styles.css" type="text/css" media=screen>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel=StyleSheet href="../styles.css" type="text/css" media=screen>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="shortcut icon" href="IMG/c.png">
     <title it>Clever Experience MX</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="About_Us.html">About Us</a></li>
-                <li><a href="Portafolio.html">Portafolio</a></li>
-                <li><a href="Contacto.html">Contacto</a></li>
-                <li><a href="Blog.html">Blog</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div class="container-fluid">
+        <div class="row">
+          <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
+            <a href="" class="navbar-brand">
+              Clever Experience
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-expanded="false" aria-label="Toggle navigation" aria-controls="navbarNav">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a href="../index.html" class="nav-link">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a href="About_Us.html" class="nav-link">About us</a>
+                </li>
+                <li class="nav-item">
+                  <a href="Portafolio.html" class="nav-link">Portafolio</a>
+                </li>
+                <li class="nav-item">
+                  <a href="Contacto.html" class="nav-link">Contacto</a>
+                </li>
+                <li class="nav-item">
+                  <a href="Blog.html" class="nav-link">Blog</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+      </div>
     <hr>
-    <br>
-    <br>
     <br>
     <br>
     <h1>
@@ -33,6 +52,8 @@
     <div class="mapa">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d931.1921575784738!2d-89.63891277079911!3d21.00190969912581!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f56754e4c03a2a7%3A0xc1b3f8197e877015!2sClever%20Experience%20MX!5e0!3m2!1ses-419!2smx!4v1628206415504!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>   
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>   
 </body>
 </html>
