--- a/Pages/Portafolio.html
+++ b/Pages/Portafolio.html
@@ -1,29 +1,48 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <link rel=StyleSheet href="../styles.css" type="text/css" media=screen>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="IMG/c.png">
-    <title it>Clever Experience MX</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel=StyleSheet href="../styles.css" type="text/css" media=screen>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+  <link rel="shortcut icon" href="IMG/c.png">
+  <title it>Clever Experience MX</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="About_Us.html">About Us</a></li>
-                <li><a href="Portafolio.html">Portafolio</a></li>
-                <li><a href="Contacto.html">Contacto</a></li>
-                <li><a href="Blog.html">Blog</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div class="container-fluid">
+        <div class="row">
+          <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
+            <a href="" class="navbar-brand">
+              Clever Experience
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-expanded="false" aria-label="Toggle navigation" aria-controls="navbarNav">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a href="../index.html" class="nav-link">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a href="About_Us.html" class="nav-link">About us</a>
+                </li>
+                <li class="nav-item">
+                  <a href="Portafolio.html" class="nav-link">Portafolio</a>
+                </li>
+                <li class="nav-item">
+                  <a href="Contacto.html" class="nav-link">Contacto</a>
+                </li>
+                <li class="nav-item">
+                  <a href="Blog.html" class="nav-link">Blog</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+      </div>
     <hr>
-    <br>
-    <br>
     <br>
     <br>
     <h1>
@@ -33,6 +52,8 @@
     <p>
         En Clever nos especializamos en potenciar la presencia digital de cada página, manteniendo la esencia de las marcas con las que trabajamos.  
     </p>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>   
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>   
 </body>
 </html>
