Cambio de fondo y letra

--- a/Pages/About_Us.html
+++ b/Pages/About_Us.html
@@ -10,7 +10,7 @@
         <link rel="shortcut icon" href="IMG/c.png">
         <title it>Clever Experience MX</title>
     </head>
-    <body>
+    <body class="oscuro">
         <div class="container-fluid">
             <div class="row">
                 <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
@@ -45,9 +45,6 @@
         <hr>
         <br>
         <br>
-        <h1>
-            ¿Qué es Clever Experience?
-        </h1>
         <br>
         <p>
             En Clever somos dedicados, innovadores y apasionados. 
