--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="shortcut icon" href="IMG/c.png">
     <title it>Clever Experience MX</title>
   </head>
-<body>
+<body class="oscuro">
     <div class="container-fluid">
       <div class="row">
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark" >
           <a class="navbar-brand" href="#">
             Clever Experience
           </a>
@@ -75,6 +75,7 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
+    <br>
     <h1>
         ¿Por qué es importante una estrategia digital?
     </h1>
