--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="IMG/c.png">
     <title it>Clever Experience MX</title>
 </head>
-<body>
+<body class="oscuro">
     <div class="container-fluid">
         <div class="row">
           <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
