--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -15,7 +15,7 @@
         <div class="row">
           <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
             <a href="" class="navbar-brand">
-              Clever Experience
+             
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-expanded="false" aria-label="Toggle navigation" aria-controls="navbarNav">
               <span class="navbar-toggler-icon"></span>
@@ -51,6 +51,17 @@
     <br>
     <div class="mapa">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d931.1921575784738!2d-89.63891277079911!3d21.00190969912581!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f56754e4c03a2a7%3A0xc1b3f8197e877015!2sClever%20Experience%20MX!5e0!3m2!1ses-419!2smx!4v1628206415504!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
+    <div class="mapa">
+      <section class="Form-contacto">
+        <input class="controls" type="text" name="nombre" id="Nombre" placeholder="Nombre">
+        <input class="controls" type="text" name="telefono" id="Telefono" placeholder="Teléfono">
+        <input class="controls" type="email" name="correo electronico" id="Correo Electronico" placeholder="Correo Electronico">
+        <input class="controls" type="text" name="mensaje" id="Mensaje" placeholder="¿Qué necesita?">
+        <p>¡Gracias por su preferencia!</p>
+        <input class="Dabuton" type="submit" value="Enviar">
+      </section>
+
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
