--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="row">
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark" >
           <a class="navbar-brand" href="#">
-            Clever Experience
+            
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -45,6 +45,8 @@
     <hr>
     <br>
     <br>
+    <img src="IMG/tipo banner clever.png" class="img-fluid" alt="...">
+    <a href="Pages/Contacto.html" class="vermas" style="float: right;">VER MÁS</a><!--Aquí debe ir el formulario de contacto-->>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
