Cambio de bg del navbar. Pestañas Servicios y Blog creadas y funcionando, pero sin contenido.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="oscuro">
     <div class="container-fluid">
       <div class="row">
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark" >
+        <nav class="navbar navbar-expand-lg fixed-top" style="background-color: black; color: white;">
           <a class="navbar-brand" href="#">
             
           </a>
@@ -32,6 +32,9 @@
                 <a href="Pages/Portafolio.html" class="nav-link">Portafolio</a>
               </li>
               <li class="nav-item">
+                <a href="Pages/Servicios.html" class="nav-link">Servicios</a>
+              </li>
+              <li class="nav-item">
                 <a href="Pages/Contacto.html" class="nav-link">Contacto</a>
               </li>
               <li class="nav-item">
@@ -46,7 +49,7 @@
     <br>
     <br>
     <img src="IMG/tipo banner clever.png" class="img-fluid" alt="...">
-    <a href="Pages/Contacto.html" class="vermas" style="float: right;">VER MÁS</a><!--Aquí debe ir el formulario de contacto-->>
+    <a href="Pages/Contacto.html" class="vermas" style="float: right;">¡Queremos trabajar contigo!</a><!--Aquí debe ir el formulario de contacto-->>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -78,13 +81,7 @@
       </a>
     </div>
     <br>
-    <h1>
-        ¿Por qué es importante una estrategia digital?
-    </h1>
-    <br>
-    <P>
-        Aquí debe ir la explicación relacionada con las estrategias digitales y su relevancia a la hora de alcaznar los objetivos de una empresa
-    </P>
+    <img src="IMG/BECLEVER.gif" class="rounded mx-auto d-block" alt="..." style="text-align: center;">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>   
