--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -13,7 +13,7 @@
 <body class="oscuro">
     <div class="container-fluid">
         <div class="row">
-          <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
+          <nav class="navbar navbar-expand-lg fixed-top" style="background-color: black; color: white;">
             <a href="" class="navbar-brand">
              
             </a>
@@ -30,6 +30,9 @@
                 </li>
                 <li class="nav-item">
                   <a href="Portafolio.html" class="nav-link">Portafolio</a>
+                </li>
+                <li class="nav-item">
+                  <a href="Servicios.html" class="nav-link">Servicios</a>
                 </li>
                 <li class="nav-item">
                   <a href="Contacto.html" class="nav-link">Contacto</a>
@@ -57,7 +60,7 @@
         <input class="controls" type="text" name="nombre" id="Nombre" placeholder="Nombre">
         <input class="controls" type="text" name="telefono" id="Telefono" placeholder="Teléfono">
         <input class="controls" type="email" name="correo electronico" id="Correo Electronico" placeholder="Correo Electronico">
-        <input class="controls" type="text" name="mensaje" id="Mensaje" placeholder="¿Qué necesita?">
+        <input class="controls" type="text" name="mensaje" id="Mensaje" placeholder="¿En qué podemos ayudarte?">
         <p>¡Gracias por su preferencia!</p>
         <input class="Dabuton" type="submit" value="Enviar">
       </section>
