--- a/Pages/Portafolio.html
+++ b/Pages/Portafolio.html
@@ -13,9 +13,9 @@
 <body class="oscuro">
     <div class="container-fluid">
         <div class="row">
-          <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
+          <nav class="navbar navbar-expand-lg fixed-top" style="background-color: black; color: white;">
             <a href="" class="navbar-brand">
-              Clever Experience
+              
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-expanded="false" aria-label="Toggle navigation" aria-controls="navbarNav">
               <span class="navbar-toggler-icon"></span>
@@ -30,6 +30,9 @@
                 </li>
                 <li class="nav-item">
                   <a href="Portafolio.html" class="nav-link">Portafolio</a>
+                </li>
+                <li class="nav-item">
+                  <a href="Servicios.html" class="nav-link">Servicios</a>
                 </li>
                 <li class="nav-item">
                   <a href="Contacto.html" class="nav-link">Contacto</a>
