--- a/Pages/Servicios.html
+++ b/Pages/Servicios.html
@@ -49,11 +49,7 @@
         <br>
         <br>
         <br>
-        <p>
-            En Clever somos dedicados, innovadores y apasionados. 
-            La creatividad es la base de nuestra confianza y la confianza es el camino para crear comunidad. 
-            Amamos lo que hacemos y estamos inspirados los unos por los otros.
-        </p>
+        <img src="../IMG/WLWWD.gif" class="rounded mx-auto d-block" alt="..." style="text-align: center;">
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>   
