Arreglado bug del menu. Cambios menores como títulos y frases.

--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -13,7 +13,7 @@
 <body class="oscuro">
     <div class="container-fluid">
         <div class="row">
-          <nav class="navbar navbar-expand-lg fixed-top" style="background-color: black; color: white;">
+          <nav class="navbar navbar-expand-lg fixed-top navbar-dark" style="background-color: black; color: white;">
             <a href="" class="navbar-brand">
              
             </a>
@@ -61,7 +61,7 @@
         <input class="controls" type="text" name="telefono" id="Telefono" placeholder="Teléfono">
         <input class="controls" type="email" name="correo electronico" id="Correo Electronico" placeholder="Correo Electronico">
         <input class="controls" type="text" name="mensaje" id="Mensaje" placeholder="¿En qué podemos ayudarte?">
-        <p>¡Gracias por su preferencia!</p>
+        <p>¡Nos encantará trabajar contigo!</p>
         <input class="Dabuton" type="submit" value="Enviar">
       </section>
 
