--- a/Pages/About_Us.html
+++ b/Pages/About_Us.html
@@ -13,7 +13,7 @@
     <body class="oscuro">
         <div class="container-fluid">
             <div class="row">
-                <nav class="navbar navbar-expand-lg fixed-top" style="background-color: black; color: white;">
+                <nav class="navbar navbar-expand-lg fixed-top navbar-dark" style="background-color: black; color: white;">
                     <a href="" class="navbar-brand">
                         
                     </a>
