--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="oscuro">
     <div class="container-fluid">
       <div class="row">
-        <nav class="navbar navbar-expand-lg fixed-top" style="background-color: black; color: white;">
+        <nav class="navbar navbar-expand-lg fixed-top navbar-dark" style="background-color: black; color: white;">
           <a class="navbar-brand" href="#">
             
           </a>
@@ -81,6 +81,7 @@
       </a>
     </div>
     <br>
+    <h1>¿Por qué es importante una estrategia digital?</h1>
     <img src="IMG/BECLEVER.gif" class="rounded mx-auto d-block" alt="..." style="text-align: center;">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
