Se elimino el formulario, se agrego un forms.

--- a/Pages/Servicios.html
+++ b/Pages/Servicios.html
@@ -51,6 +51,16 @@
         <br>
         <h1>¡Conoce nuestros servicios!</h1>
         <img src="../IMG/WLWWD.gif" class="rounded mx-auto d-block" alt="..." style="text-align: center;">
+        <br>
+        <p>(Re)Diseño de Logo: Creacion o reinterpretación del diseño visual característico de la marca,importante para ayudarte a distinguir de los demás.</p>
+        <br>
+        <p>Paleta Cromática de la Marca: Con la ayuda de esta herramienta podrás elegir los colores adecuados para transmitir el mensaje de tu marca, así como ser la base de diseños posteriores.</p>
+        <br>
+        <p>Tipografía de la Marca: Selección de tipografías a utilizar que ayudan a darle un estilo armonioso a todos los contenidos de tu marca.</p>
+        <br>
+        <p>Guía de Identidad de la Marca: Este es un manual de identidad en el cual se representan los principales elementos gráficos de tu marca y en él te explicamos cómo puedes utilizarlos.</p>
+        <br>
+        <p>Fotografía de Producto: Sesión de fotos para la marca enfocada en resaltar la identidad de la misma.</p>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>   
