Se agrego el formulario forms dentro de la pagina

--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -56,9 +56,6 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d931.1921575784738!2d-89.63891277079911!3d21.00190969912581!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f56754e4c03a2a7%3A0xc1b3f8197e877015!2sClever%20Experience%20MX!5e0!3m2!1ses-419!2smx!4v1628206415504!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
     <div class="mapa">
-      <a class="contactos" href="https://docs.google.com/forms/d/e/1FAIpQLScRDWhHmjRpGMu4DqQx8lro65DMB09zMRwqYv8fa9utYU2q8Q/viewform?usp=sf_link">   ¡Aquí te contactaremos!</a>
-      <br>
-      <br>
       
       <p>Teléfono de Oficina: 9998281250</p>
       <p>Ubicación: Calle 43 entre 30 y 32. Pedregales de Tanlum (Interior)</p>
@@ -66,6 +63,9 @@
       <p>Ig: @cleverexperiencemx</p>
       <p>contacto@beclevermx.com</p>
 
+    </div>
+    <div class="mapa">
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScRDWhHmjRpGMu4DqQx8lro65DMB09zMRwqYv8fa9utYU2q8Q/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
