--- a/Pages/Servicios.html
+++ b/Pages/Servicios.html
@@ -52,15 +52,19 @@
         <h1>¡Conoce nuestros servicios!</h1>
         <img src="../IMG/WLWWD.gif" class="rounded mx-auto d-block" alt="..." style="text-align: center;">
         <br>
-        <p>(Re)Diseño de Logo: Creacion o reinterpretación del diseño visual característico de la marca,importante para ayudarte a distinguir de los demás.</p>
+        <p><b>Diseño de Logo: <b>Nos encargamos de la creación e interpretación del diseño visual característico de la marca ayuda a distinguir tu marca de los demás.</p>
         <br>
-        <p>Paleta Cromática de la Marca: Con la ayuda de esta herramienta podrás elegir los colores adecuados para transmitir el mensaje de tu marca, así como ser la base de diseños posteriores.</p>
+        <p><b>Copywriting: <b>Transformamos tu conocimiento en contenido a través de textos que puedan llegar a las personas ideales que impulsen tu marca y,por tanto, tus ventas.</p>
         <br>
-        <p>Tipografía de la Marca: Selección de tipografías a utilizar que ayudan a darle un estilo armonioso a todos los contenidos de tu marca.</p>
+        <p><b>Community Management: <b>Nos convertimos en parte de tu marca y te apoyamos mejorando la eficacia comunicativa que se tiene con los clientes teniendo así mayor oportunidad de ventas.</p>
         <br>
-        <p>Guía de Identidad de la Marca: Este es un manual de identidad en el cual se representan los principales elementos gráficos de tu marca y en él te explicamos cómo puedes utilizarlos.</p>
+        <p><b>Fotografía de Producto: <b>Consiste en una sesión de fotos para la marca enfocada en resaltar la identidad con una plantación previamente realizada por los creativos de Clever.</p>
         <br>
-        <p>Fotografía de Producto: Sesión de fotos para la marca enfocada en resaltar la identidad de la misma.</p>
+        <p><b>Campañas Publicitarias: <b>Creamos contenido enfocado a que tu marca genere conexiones digitales diseñadas con el objetivo de aumentar tus ventas y tu posicionamiento en el mercado.</p>
+        <br>
+        <p><b>Branding: <b>El equipo Clever creará una estrategia y una identidad visual para que en tus redes sociales y contenido se refleje la esencia y personalidades de tu marca para captar la atención de tu mercado meta.</p>
+        <br>
+        <p><b>Creación de Contenido: <b>¿Necesitas ayuda con el arte visual de tu marca? Te ayudamos. Nos enfocamos a crear contenido para tu marca y redes sociales.</p>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>   
