--- a/Pages/About_Us.html
+++ b/Pages/About_Us.html
@@ -54,6 +54,26 @@
             La creatividad es la base de nuestra confianza y la confianza es el camino para crear comunidad. 
             Amamos lo que hacemos y estamos inspirados los unos por los otros.
         </p>
+        <div class="gallery-container">
+          <div class="gallery__item">
+            <img src="../IMG/AU1.jpg" alt="" class="gallery__img">
+          </div>
+          <div class="gallery__item">
+            <img src="../IMG/AU2.jpg" alt="" class="gallery__img">
+          </div>
+          <div class="gallery__item">
+            <img src="../IMG/AU3.jpg" alt="" class="gallery__img">
+          </div>
+          <div class="gallery__item">
+            <img src="../IMG/AU4.jpg" alt="" class="gallery__img">
+          </div>
+          <div class="gallery__item">
+            <img src="../IMG/AU5.jpg" alt="" class="gallery__img">
+          </div>
+          <div class="gallery__item">
+            <img src="../IMG/AU6.jpg" alt="" class="gallery__img">
+          </div>
+        </div>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>   
