Cambio de imagenes. Se agrega el texto de inicio. Se agrega imagen  al tope de AboutUs

--- a/Pages/About_Us.html
+++ b/Pages/About_Us.html
@@ -49,6 +49,9 @@
         <br>
         <br>
         <br>
+        <div class="mapa">
+          <img class="mapa" src="../IMG/Clever.gif" alt="">
+        </div>
         <p>
             En Clever somos dedicados, innovadores y apasionados. 
             La creatividad es la base de nuestra confianza y la confianza es el camino para crear comunidad. 
@@ -68,10 +71,7 @@
             <img src="../IMG/AU4.jpg" alt="" class="gallery__img">
           </div>
           <div class="gallery__item">
-            <img src="../IMG/AU5.jpg" alt="" class="gallery__img">
-          </div>
-          <div class="gallery__item">
-            <img src="../IMG/AU6.jpg" alt="" class="gallery__img">
+            <img src="../IMG/AU5.gif" alt="" class="gallery__img">
           </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
