--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
     </div>
     <br>
     <h1>¿Por qué es importante una estrategia digital?</h1>
+    <p>El marketing digital es una herramienta estratégica para las empresas y consiste en todos los esfuerzos de marketing que una empresa realiza en el mundo digital. Con esto nos referimos, por supuesto, a la presencia online de la empresa.</p>
+    <p>El Marketing Digital es una de las herramientas más interesantes que puede utilizar una empresa de marketing para aumentar su presencia online y por ende sus ventas.</p>  
+    <p>Hoy en día, no tener presencia online es un mal negocio para las empresas. Una empresa puede perder muchas oportunidades que sólo están disponibles en el mundo online.</p>
+    <p>¿Y tú? ¿Ya tienes cuentas con una estrategia digital?</p>
     <img src="IMG/BECLEVER.gif" class="rounded mx-auto d-block" alt="..." style="text-align: center;">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
