--- a/Pages/About_Us.html
+++ b/Pages/About_Us.html
@@ -46,11 +46,8 @@
             </div>
         </div>
         <hr>
-        <br>
-        <br>
-        <br>
         <div class="mapa">
-          <img class="mapa" src="../IMG/Clever.gif" alt="">
+          <img class="mapasinmargen" src="../IMG/Clever.gif" alt="">
         </div>
         <p>
             En Clever somos dedicados, innovadores y apasionados. 
