Correcion de imagen ABOUTUS

--- a/Pages/About_Us.html
+++ b/Pages/About_Us.html
@@ -46,8 +46,8 @@
             </div>
         </div>
         <hr>
-        <div class="mapa">
-          <img class="mapasinmargen" src="../IMG/Clever.gif" alt="">
+        <div class="mapasinmargen">
+          <img class="img-fluid" src="../IMG/Clever.gif" alt="">
         </div>
         <p>
             En Clever somos dedicados, innovadores y apasionados. 
