--- a/Pages/Portafolio.html
+++ b/Pages/Portafolio.html
@@ -55,6 +55,18 @@
     <p>
         En Clever nos especializamos en potenciar la presencia digital de cada página, manteniendo la esencia de las marcas con las que trabajamos.  
     </p>
+    <div class="mapasinmargen">
+      <img class="img-fluid" src="../IMG/LACASETAMID.png" alt="">
+      <p>La Caseta MID</p>
+      <p>Diseño de logo.</p>
+    </div>
+    <hr>
+    <div class="mapasinmargen">
+      <img style="width: 80%;" class="img-fluid" src="../IMG/KAPE.png" alt="">
+      <p>KAPÉ Macramé</p>
+      <p>Branding y diseño de packaging.</p>
+    </div>
+    <hr>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>   
