Bold letras y puesta imagenSEPBlog

--- a/Pages/Blog.html
+++ b/Pages/Blog.html
@@ -65,7 +65,9 @@
                 }
             }
         </script>
-        
+        <div class="mapasinmargen">
+            <img class="img-fluid" src="../IMG/SEPARACIONBLOG1.jpg" alt="">
+        </div>
         <div>
                 <div class="parrafo">
                     <h3>¿Cómo sé si una Agencia es confiable?</h3>
