--- a/Pages/Portafolio.html
+++ b/Pages/Portafolio.html
@@ -57,13 +57,13 @@
     </p>
     <div class="mapasinmargen">
       <img class="img-fluid" src="../IMG/LACASETAMID.png" alt="">
-      <p>La Caseta MID</p>
+      <p style="font-weight: bold;">La Caseta MID</p>
       <p>Diseño de logo.</p>
     </div>
     <hr>
     <div class="mapasinmargen">
       <img style="width: 80%;" class="img-fluid" src="../IMG/KAPE.png" alt="">
-      <p>KAPÉ Macramé</p>
+      <p style="font-weight: bold;">KAPÉ Macramé</p>
       <p>Branding y diseño de packaging.</p>
     </div>
     <hr>
