Caprichos de natt

--- a/Pages/Portafolio.html
+++ b/Pages/Portafolio.html
@@ -62,7 +62,7 @@
     </div>
     <hr>
     <div class="mapasinmargen">
-      <img style="width: 80%;" class="img-fluid" src="../IMG/KAPE.png" alt="">
+      <img class="img-fluid" src="../IMG/KAPE.png" alt="">
       <p style="font-weight: bold;">KAPÉ Macramé</p>
       <p>Branding y diseño de packaging.</p>
     </div>
