Link a WhatsApp en Servicios

--- a/Pages/Servicios.html
+++ b/Pages/Servicios.html
@@ -54,27 +54,27 @@
         <br>
         <hr>
         <div class="serv-container">
-            <img class="img-fluid" src="../IMG/campañas_publicitarias.png" alt="">
+            <a href="https://wa.me/message/XPL3EEBDNVEOD1" title="WAB"><img class="img-fluid" src="../IMG/campañas_publicitarias.png" alt="WAB"></a>
         </div>
         <hr>
         <div class="serv-container">
-            <img class="img-fluid" src="../IMG/com_man.png" alt="">
+            <a href="https://wa.me/message/XPL3EEBDNVEOD1" title="WAB"><img class="img-fluid" src="../IMG/com_man.png" alt="WAB"></a>
         </div>
         <hr>
         <div class="serv-container">
-            <img class="img-fluid" src="../IMG/crea_cont.png" alt="">
+            <a href="https://wa.me/message/XPL3EEBDNVEOD1" title="WAB"><img class="img-fluid" src="../IMG/crea_cont.png" alt="WAB"></a>
         </div>
         <hr>
         <div class="serv-container">
-            <img class="img-fluid" src="../IMG/desarrollo_web.png" alt="">
+            <a href="https://wa.me/message/XPL3EEBDNVEOD1" title="WAB"><img class="img-fluid" src="../IMG/desarrollo_web.png" alt="WAB"></a>
         </div>
         <hr>
         <div class="serv-container">
-            <img class="img-fluid" src="../IMG/fotoyvideo.png" alt="">
+            <a href="https://wa.me/message/XPL3EEBDNVEOD1" title="WAB"><img class="img-fluid" src="../IMG/fotoyvideo.png" alt="WAB"></a>
         </div>
         <hr>
         <div class="serv-container">
-            <img class="img-fluid" src="../IMG/identidad.png" alt="">
+            <a href="https://wa.me/message/XPL3EEBDNVEOD1" title="WAB"><img class="img-fluid" src="../IMG/identidad.png" alt="WAB"></a>
         </div>
         <hr>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
