Se elimino de manera preventiva la pestaña Portafolios. Se modifico el funcionamiento del VerMas

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
               <li class="nav-item">
                 <a href="Pages/About_Us.html" class="nav-link">About us</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a href="Pages/Portafolio.html" class="nav-link">Portafolio</a>
-              </li>
+              </li>-->
               <li class="nav-item">
                 <a href="Pages/Servicios.html" class="nav-link">Servicios</a>
               </li>
@@ -49,7 +49,7 @@
     <br>
     <br>
     <img src="IMG/tipo banner clever.png" class="img-fluid" alt="...">
-    <a href="Pages/Contacto.html" class="vermas" style="float: right;">¡Queremos trabajar contigo!</a><!--Aquí debe ir el formulario de contacto-->>
+    <a href="Pages/Contacto.html" class="vermas" style="float: right;">¡Queremos trabajar contigo!</a><!--Aquí debe ir el formulario de contacto-->
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
