--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -28,9 +28,9 @@
                 <li class="nav-item">
                   <a href="About_Us.html" class="nav-link">About us</a>
                 </li>
-                <li class="nav-item">
+                <!--<li class="nav-item">
                   <a href="Portafolio.html" class="nav-link">Portafolio</a>
-                </li>
+                </li>-->
                 <li class="nav-item">
                   <a href="Servicios.html" class="nav-link">Servicios</a>
                 </li>
