--- a/Pages/Servicios.html
+++ b/Pages/Servicios.html
@@ -28,12 +28,12 @@
                             <li class="nav-item">
                                 <a href="About_Us.html" class="nav-link">About us</a>
                             </li>
-                            <li class="nav-item">
+                            <!--<li class="nav-item">
                                 <a href="Portafolio.html" class="nav-link">Portafolio</a>
-                            </li>
+                            </li>-->
                             <li class="nav-item">
                                 <a href="Servicios.html" class="nav-link">Servicios</a>
-                              </li>
+                            </li>
                             <li class="nav-item">
                                 <a href="Contacto.html" class="nav-link">Contacto</a>
                             </li>
